# dql_task_adaptation

./: .gitignore  README.md  dkt.params  dkvmn.params  generate_dataset.ipynb  main.py  pyproject.toml  simulation_const.py  simulation_plot.py  simulation_util.py  test.ipynb  test_trained_model.ipynb
akt/: akt.ipynb  prepare_dataset.ipynb  prepare_dataset.py  train_akt.py
assistment/AKT/: prepare_dataset.ipynb
assistment/DKT/: DKT.ipynb  dkt.params  prepare_dataset.ipynb
assistments/AKT/: AKT.ipynb
assistments/DKT/: DKT.ipynb  dkt.params  prepare_dataset.ipynb
assistments/DKVMN/: DKVMN.ipynb  prepare_dataset.ipynb
dkt/: assistment-2009-2010-skilldkt.params  dkt.ipynb  dkt.params  loader.py  prepare_assistment_data.py  prepare_dataset.ipynb  prepare_dataset.py  prepare_simulation_data.py  train_dkt.py
dkvmn/: dataset_dkvmn.params  dkvmn.ipynb  dkvmn.params  train_dkvmn.py
simulation/AKT/: AKT.ipynb  prepare_dataset.ipynb
simulation/DKT/: DKT.ipynb  dkt.params  loader.py  prepare_dataset.ipynb
simulation/DKVMN/: DKVMN.ipynb  dkvmn.params  prepare_dataset.ipynb
