[project]
name = "dql-task-adaptation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eduktm>=0.0.10",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "optuna>=4.2.1",
    "optuna-dashboard>=0.17.0",
    "plotly>=6.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
