[project]
name = "dql-task-adaptation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "optuna>=4.2.1",
    "plotly>=6.0.0",
    "eduktm>=0.0.10",
    "optuna-dashboard>=0.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
